welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:3: error: '<-' expected but ')' found.
for(i->0 to 4){
             ^MethodsDogHouse:54: error: illegal start of simple expression
}
^