welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
var i=0;
var j=0;
for(i->0 to 4){
	leveBrosse();
	setCouleurBrosse(Color.red);
	for(j<-4){
		avance(); avance(); gauche();
	
	}
	
	
	
	
	
	
	
	
	
	
	}